--- a/index.html
+++ b/index.html
@@ -59,8 +59,13 @@
                 <div class="about-content">
                     <div class="col-1">
                         <h3>I'm <span class="text-primary">Aymen Gharbi,</span> a Software Engineer</h3>
-                        <p>I am a dedicated Software Engineering student with a strong interest in building innovative &amp; efficient software solutions. Through my academic work and personal projects, I’ve developed a solid foundation in programming, software design principles, and problem-solving.</p>
-                        <p>I’m passionate about learning new technologies &amp; continuously improving my skills to prepare for a successful career in the tech industry. Eager to contribute, collaborate, and grow, I’m actively seeking opportunities to apply my knowledge in real-world settings.</p>
+                        <p>I am a dedicated Software Engineering student with a strong interest in building innovative
+                            &amp; efficient software solutions. Through my academic work and personal projects, I’ve
+                            developed a solid foundation in programming, software design principles, and
+                            problem-solving.</p>
+                        <p>I’m passionate about learning new technologies &amp; continuously improving my skills to
+                            prepare for a successful career in the tech industry. Eager to contribute, collaborate, and
+                            grow, I’m actively seeking opportunities to apply my knowledge in real-world settings.</p>
                     </div>
                     <div class="col-2">
                         <p><b>Email:</b> agharbi326@gmail.com</p>
@@ -70,8 +75,8 @@
             </div>
         </section>
         <!-- About End -->
-         <!-- Skills Start -->
-          <section id="skills">
+        <!-- Skills Start -->
+        <section id="skills">
             <div class="container">
                 <h2>
                     <i class="fa-solid fa-laptop-code"></i> Skills &amp; <span class="text-primary">Abilities</span>
@@ -114,9 +119,9 @@
                     </div>
                 </div>
             </div>
-          </section>
-         <!-- Skills End -->
-         <!-- Services Start  -->
+        </section>
+        <!-- Skills End -->
+        <!-- Services Start  -->
         <section id="services">
             <div class="container">
                 <h2><i class="fas fa-cogs"></i> <span class="text-primary">My </span> Services</h2>
@@ -155,10 +160,10 @@
                 </div>
             </div>
         </section>
-         <!-- Services End  -->
+        <!-- Services End  -->
 
-         <!-- Projects Start  -->
-          <section id="projects">
+        <!-- Projects Start  -->
+        <section id="projects">
             <div class="container">
                 <h2>
                     <i class="fa-solid fa-laptop-code"></i> My <span class="text-primary">Projects</span>
@@ -169,22 +174,24 @@
                         <img src="/img/cryptographie.png" alt="AES-CryptoProject">
                         <div class="item-content">
                             <h3>AES-CryptoProject</h3>
-                            <a href="https://github.com/Aym3nGharbi/AES-CryptoProject" target="_blank" class="btn-primary">Source Code</a>
+                            <a href="https://github.com/Aym3nGharbi/AES-CryptoProject" target="_blank"
+                                class="btn-primary">Source Code</a>
                         </div>
                     </div>
                     <div class="item">
                         <img src="/img/student-management-software.png" alt="Academic-Tracker">
                         <div class="item-content">
                             <h3>Academic-Tracker</h3>
-                            <a href="https://github.com/Aym3nGharbi/Academic-Tracker" target="_blank" class="btn-primary">Source Code</a>
+                            <a href="https://github.com/Aym3nGharbi/Academic-Tracker" target="_blank"
+                                class="btn-primary">Source Code</a>
                         </div>
                     </div>
                     <div class="item">
                         <img src="/img/Tic Tac Toe.png" alt="Tic Tac Toe Game">
                         <div class="item-content">
-                            <h3>Tic Tac Toe Game</h3>
-                            <a href="" target="_blank" class="btn-primary">Play</a>
-                            <a href="" target="_blank" class="btn-primary">Source Code</a>
+                            <h3>Tic Tac Toe</h3>
+                            <a href="https://github.com/Aym3nGharbi/TicTacToe-Java" target="_blank"
+                                class="btn-primary">Source Code</a>
                         </div>
                     </div>
                     <div class="item">
@@ -197,11 +204,11 @@
                     </div>
                 </div>
             </div>
-          </section>
-          <!-- Projects End  -->
+        </section>
+        <!-- Projects End  -->
 
-          <!-- Contact Start -->
-           <section id="contact">
+        <!-- Contact Start -->
+        <section id="contact">
             <div class="container">
                 <h2><i class="fa-solid fa-headset"></i> Get In <span class="text-primary">Touch</span></h2>
                 <hr>
@@ -215,13 +222,14 @@
                     </form>
                 </div>
             </div>
-           </section>
-          <!-- Contact End  -->
+        </section>
+        <!-- Contact End  -->
     </main>
     <!-- Footer Start -->
-     <footer id="footer">
+    <footer id="footer">
         <p>&copy; 2025 | All rights reserved</p>
-     </footer>
-     <!-- Footer End -->
+    </footer>
+    <!-- Footer End -->
 </body>
+
 </html>
