--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 <hr>
                 <div class="row">
                     <div class="item">
-                        <img src="/img/cryptographie.png" alt="AES-CryptoProject">
+                        <img src="./img/cryptographie.png" alt="AES-CryptoProject">
                         <div class="item-content">
                             <h3>AES-CryptoProject</h3>
                             <a href="https://github.com/Aym3nGharbi/AES-CryptoProject" target="_blank"
@@ -179,7 +179,7 @@
                         </div>
                     </div>
                     <div class="item">
-                        <img src="/img/student-management-software.png" alt="Academic-Tracker">
+                        <img src="./img/student-management-software.png" alt="Academic-Tracker">
                         <div class="item-content">
                             <h3>Academic-Tracker</h3>
                             <a href="https://github.com/Aym3nGharbi/Academic-Tracker" target="_blank"
@@ -187,7 +187,7 @@
                         </div>
                     </div>
                     <div class="item">
-                        <img src="/img/Tic Tac Toe.png" alt="Tic Tac Toe Game">
+                        <img src="./img/Tic Tac Toe.png" alt="Tic Tac Toe Game">
                         <div class="item-content">
                             <h3>Tic Tac Toe</h3>
                             <a href="https://github.com/Aym3nGharbi/TicTacToe-Java" target="_blank"
@@ -195,7 +195,7 @@
                         </div>
                     </div>
                     <div class="item">
-                        <img src="img/fylo.png" alt="Fylo">
+                        <img src="./img/fylo.png" alt="Fylo">
                         <div class="item-content">
                             <h3>FYLO landing page</h3>
                             <a href="" target="_blank" class="btn-primary">Visit Website</a>
@@ -213,7 +213,7 @@
                 <h2><i class="fa-solid fa-headset"></i> Get In <span class="text-primary">Touch</span></h2>
                 <hr>
                 <div class="row">
-                    <img src="/img/contact.png" alt="Get In Touch">
+                    <img src="./img/contact.png" alt="Get In Touch">
                     <form action="https://formsubmit.co/agharbi326@gmail.com" method="POST">
                         <input type="text" name="Name" id="Name" placeholder="Name" required>
                         <input type="email" name="Email" id="Email" placeholder="Email" required>
