--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!-- Header End -->
     <main>
         <!-- About Start -->
-        <section id="about">
+        <section id="about" class="reveal">
             <div class="container">
                 <h2>About Me</h2>
                 <hr>
@@ -76,7 +76,7 @@
         </section>
         <!-- About End -->
         <!-- Skills Start -->
-        <section id="skills">
+        <section id="skills" class="reveal">
             <div class="container">
                 <h2>
                     <i class="fa-solid fa-laptop-code"></i> Skills &amp; <span class="text-primary">Abilities</span>
@@ -122,7 +122,7 @@
         </section>
         <!-- Skills End -->
         <!-- Services Start  -->
-        <section id="services">
+        <section id="services" class="reveal">
             <div class="container">
                 <h2><i class="fas fa-cogs"></i> <span class="text-primary">My </span> Services</h2>
                 <hr>
@@ -163,7 +163,7 @@
         <!-- Services End  -->
 
         <!-- Projects Start  -->
-        <section id="projects">
+        <section id="projects" class="reveal">
             <div class="container">
                 <h2>
                     <i class="fa-solid fa-laptop-code"></i> My <span class="text-primary">Projects</span>
@@ -210,7 +210,7 @@
         <!-- Projects End  -->
 
         <!-- Contact Start -->
-        <section id="contact">
+        <section id="contact" class="reveal">
             <div class="container">
                 <h2><i class="fa-solid fa-headset"></i> Get In <span class="text-primary">Touch</span></h2>
                 <hr>
@@ -232,6 +232,8 @@
         <p>&copy; 2025 | All rights reserved</p>
     </footer>
     <!-- Footer End -->
+    <button id="scrollToTop">↑</button>
+    <script src="/script.js"></script>
 </body>
 
 </html>
