--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
     </footer>
     <!-- Footer End -->
     <button id="scrollToTop">↑</button>
-    <script src="/script.js"></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
