Update Projects and Skills

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     <header id="home">
         <div class="navbar">
             <nav>
-                <a href="#home" id="logo">Aymen Gharbi</a>
+                <a href="#home" id="logo" class="scroll-link">Aymen Gharbi</a>
                 <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#home" class="scroll-link">Home</a></li>
+                    <li><a href="#about" class="scroll-link">About</a></li>
+                    <li><a href="#services" class="scroll-link">Services</a></li>
+                    <li><a href="#projects" class="scroll-link">Projects</a></li>
+                    <li><a href="#contact" class="scroll-link">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -44,7 +44,7 @@
                             class="fa-brands fa-instagram"></i></a>
                     <a href="https://github.com/Aym3nGharbi" target="_blank"><i class="fa-brands fa-github"></i></a>
                 </div>
-                <a href="#about" class="btn-primary">About Me <i class="fa-solid fa-circle-down"></i></a>
+                <a href="#about" class="btn-primary scroll-link">About Me <i class="fa-solid fa-circle-down"></i></a>
             </div>
             <img src="./img/PortfoliPhoto.png" alt="Aymen Gharbi">
         </div>
@@ -97,8 +97,8 @@
                             <p>JS</p>
                         </div>
                         <div class="item">
-                            <img src="./img/c.png" alt="C">
-                            <p>C</p>
+                            <img src="./img/reactjs.png" alt="React Js">
+                            <p>React Js</p>
                         </div>
                         <div class="item">
                             <img src="./img/java.png" alt="JAVA">
@@ -187,11 +187,15 @@
                         </div>
                     </div>
                     <div class="item">
-                        <img src="./img/Tic Tac Toe.png" alt="Tic Tac Toe Game">
+                        <img src="./img/weather.png" alt="Weather-App">
                         <div class="item-content">
-                            <h3>Tic Tac Toe</h3>
-                            <a href="https://github.com/Aym3nGharbi/TicTacToe-Java" target="_blank"
-                                class="btn-primary">Source Code</a>
+                            <h3>Weather-App</h3>
+                            <a href="https://aym3ngharbi.github.io/Weather-App/" target="_blank"
+                                class="btn-primary">Visit
+                                Website</a>
+                            <a href="https://github.com/Aym3nGharbi/Weather-App" target="_blank"
+                                class="btn-primary">Source
+                                Code</a>
                         </div>
                     </div>
                     <div class="item">
@@ -204,8 +208,33 @@
                                 Code</a>
                         </div>
                     </div>
-                </div>
-            </div>
+                        <div class="item">
+                            <img src="./img/password.png" alt="Password-Generator">
+                            <div class="item-content">
+                                <h3>Password-Generator</h3>
+                                <a href="https://aym3ngharbi.github.io/Password-Generator/" target="_blank"
+                                    class="btn-primary">Visit
+                                    Website</a>
+                                <a href="https://github.com/Aym3nGharbi/Password-Generator" target="_blank"
+                                    class="btn-primary">Source
+                                    Code</a>
+                            </div>
+                        </div>
+                            <div class="item">
+                                <img src="./img/stopwatch.png" alt="Stopwatch">
+                                <div class="item-content">
+                                    <h3>Stopwatch</h3>
+                                    <a href="https://aym3ngharbi.github.io/Stopwatch/" target="_blank"
+                                        class="btn-primary">Visit
+                                        Website</a>
+                                    <a href="https://github.com/Aym3nGharbi/Stopwatch" target="_blank"
+                                        class="btn-primary">Source
+                                        Code</a>
+                                </div>
+                            </div>
+                            </div>
+                        </div>
+                    </div>
         </section>
         <!-- Projects End  -->
 
