--- a/index.html
+++ b/index.html
@@ -208,33 +208,31 @@
                                 Code</a>
                         </div>
                     </div>
-                        <div class="item">
-                            <img src="./img/password.png" alt="Password-Generator">
-                            <div class="item-content">
-                                <h3>Password-Generator</h3>
-                                <a href="https://aym3ngharbi.github.io/Password-Generator/" target="_blank"
-                                    class="btn-primary">Visit
-                                    Website</a>
-                                <a href="https://github.com/Aym3nGharbi/Password-Generator" target="_blank"
-                                    class="btn-primary">Source
-                                    Code</a>
-                            </div>
-                        </div>
-                            <div class="item">
-                                <img src="./img/stopwatch.png" alt="Stopwatch">
-                                <div class="item-content">
-                                    <h3>Stopwatch</h3>
-                                    <a href="https://aym3ngharbi.github.io/Stopwatch/" target="_blank"
-                                        class="btn-primary">Visit
-                                        Website</a>
-                                    <a href="https://github.com/Aym3nGharbi/Stopwatch" target="_blank"
-                                        class="btn-primary">Source
-                                        Code</a>
-                                </div>
-                            </div>
-                            </div>
+                    <div class="item">
+                        <img src="./img/password.png" alt="Password-Generator">
+                        <div class="item-content">
+                            <h3>Password-Generator</h3>
+                            <a href="https://aym3ngharbi.github.io/Password-Generator/" target="_blank"
+                                class="btn-primary">Visit
+                                Website</a>
+                            <a href="https://github.com/Aym3nGharbi/Password-Generator" target="_blank"
+                                class="btn-primary">Source
+                                Code</a>
                         </div>
                     </div>
+                    <div class="item">
+                        <img src="./img/RecipAI.jpeg" alt="RecipAI">
+                        <div class="item-content">
+                            <h3>Stopwatch</h3>
+                            <a href="https://recipai-aymen.netlify.app/" target="_blank" class="btn-primary">Visit
+                                Website</a>
+                            <a href="https://github.com/Aym3nGharbi/RecipAI" target="_blank" class="btn-primary">Source
+                                Code</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </div>
         </section>
         <!-- Projects End  -->
 
