--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                     <div class="item">
                         <img src="./img/RecipAI.jpeg" alt="RecipAI">
                         <div class="item-content">
-                            <h3>Stopwatch</h3>
+                            <h3>RecipAI</h3>
                             <a href="https://recipai-aymen.netlify.app/" target="_blank" class="btn-primary">Visit
                                 Website</a>
                             <a href="https://github.com/Aym3nGharbi/RecipAI" target="_blank" class="btn-primary">Source
