update the name of the project RecipAI

--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
             </div>
         </section>
         <!-- Skills End -->
+         
         <!-- Services Start  -->
         <section id="services" class="reveal">
             <div class="container">
@@ -223,7 +224,7 @@
                     <div class="item">
                         <img src="./img/RecipAI.jpeg" alt="RecipAI">
                         <div class="item-content">
-                            <h3>Stopwatch</h3>
+                            <h3>RecipAI</h3>
                             <a href="https://recipai-aymen.netlify.app/" target="_blank" class="btn-primary">Visit
                                 Website</a>
                             <a href="https://github.com/Aym3nGharbi/RecipAI" target="_blank" class="btn-primary">Source
